--- a/res/layout/activity_edit_friends.xml
+++ b/res/layout/activity_edit_friends.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.elionhaxhi.ribbit.EditFriendsActivity" >
+    tools:context="com.elionhaxhi.ribbit.ui.EditFriendsActivity" >
 
     <ListView
         android:id="@android:id/list"
