--- a/res/layout/activity_sign_up.xml
+++ b/res/layout/activity_sign_up.xml
@@ -3,7 +3,7 @@
     style="@style/AuthBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.elionhaxhi.ribbit.SignUpActivity" >
+    tools:context="com.elionhaxhi.ribbit.ui.SignUpActivity" >
 
     <ImageView
         android:id="@+id/backgroundImage"
