--- a/res/layout/user_grid.xml
+++ b/res/layout/user_grid.xml
@@ -4,13 +4,22 @@
     android:layout_height="match_parent"
     tools:context="com.elionhaxhi.ribbit.MainActivity$PlaceholderFragment" >
 
-    <ListView
-        android:id="@android:id/list"
+    <GridView
+        android:id="@+id/friendsGrid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
-    </ListView>
+        android:layout_alignParentTop="true" 
+        android:clipToPadding="false"
+        android:horizontalSpacing="@dimen/user_grid_spacing"
+        android:numColumns="auto_fit"
+        android:columnWidth="90dp"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="@dimen/user_grid_spacing"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        >
+    </GridView>
     
     <TextView 
         android:id="@android:id/empty"
